--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.26"
-  }
+    "@types/styled-components": "^5.1.26",
+    "concurrently": "^8.0.1"
+  },
+  "proxy": "http://localhost:3001"
 }
