--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "farpost-test",
+  "homepage": "http://kaisyQ.github.io/tasks",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -25,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -47,7 +50,8 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
-    "concurrently": "^8.0.1"
+    "concurrently": "^8.0.1",
+    "gh-pages": "^5.0.0"
   },
   "proxy": "http://localhost:3001"
 }
